# lyra

./: .gitignore  CMakeLists.txt  Cargo.toml  PHASE0-RESULTS.md  README.md  install.sh
.github/workflows/: release.yml
cmake/: fix-link-order.cmake
crates/cli/: Cargo.toml
crates/cli/src/: cmd.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  queue.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  model.rs  queries.rs  schema.rs
crates/decoder/: Cargo.toml
crates/decoder/src/: lib.rs  symphonia_backend.rs
crates/decoder/tests/: decode.rs
crates/dsp/: Cargo.toml
crates/dsp/src/: eq.rs  lib.rs  loudness.rs  resample.rs
crates/engine/: Cargo.toml
crates/engine/examples/: play.rs
crates/engine/src/: decode_loop.rs  lib.rs  output.rs  spectrum.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: cover.rs  lib.rs  lyrics.rs  tags.rs
crates/metadata/tests/: roundtrip.rs
crates/ui/: .qmlls.ini  Cargo.toml  build.rs
crates/ui/cpp/: main.cpp
crates/ui/qml/: AlbumCard.qml  ArtistRow.qml  GenreRow.qml  Main.qml  SidebarItem.qml  TrackDelegate.qml
crates/ui/src/: bridge.rs  lib.rs  library.rs  mpris.rs  paths.rs  player.rs
docs/superpowers/plans/: 2026-06-28-lyra-phase0-spike-skeleton.md  2026-06-28-lyra-phase1a-data-foundation.md  2026-06-28-lyra-phase1b-playback-engine.md  2026-06-28-lyra-phase1c-browse.md  2026-06-28-lyra-phase1c-core-ui.md  2026-06-28-lyra-phase1c-mpris.md  2026-06-28-lyra-phase1c-transport.md  2026-06-28-lyra-phase1c-ui-layout.md
docs/superpowers/specs/: 2026-06-27-lyra-music-player-design.md  2026-07-01-podcasts-design.md
packaging/: ai.drivee.lyra.desktop  ai.drivee.lyra.metainfo.xml
packaging/appimage/: build-appimage.sh
packaging/flatpak/: ai.drivee.lyra.yml
spikes/cpal-pipewire/: Cargo.toml
spikes/cpal-pipewire/src/: main.rs
spikes/rodio-play/: Cargo.toml
spikes/rodio-play/src/: main.rs
web/: index.html
