[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/decoder",
    "crates/dsp",
    "crates/engine",
    "crates/ui",
    "crates/db",
    "crates/metadata",
    "crates/library",
    "spikes/rodio-play",
    "spikes/cpal-pipewire",
]

# Single source of truth for shared version pins. Member crates write
# `dep = { workspace = true }` to inherit. Phase 1 adds rusqlite, lofty,
# symphonia, ebur128, rubato, biquad, rtrb, tokio here — NOT in Phase 0.
[workspace.dependencies]
# CXX-Qt family — exact pins; the API differs across 0.6/0.7/0.8/0.9.
cxx          = "1.0"
cxx-qt       = "=0.8.1"
cxx-qt-lib   = { version = "=0.8.1", features = ["qt_full", "link_qt_object_files"] }
cxx-qt-build = { version = "=0.8.1", features = ["link_qt_object_files"] }
# Audio (verified).
cpal       = { version = "=0.18.1", features = ["pipewire"] }
rodio      = "=0.22.2"
symphonia  = { version = "0.6", features = ["mp3","isomp4","aac","flac","vorbis","wav","pcm"] }
ebur128    = "0.1"
rubato     = "3"
biquad     = "0.6"
rtrb       = "0.3"
# Data layer (Phase 1A: pure Rust, no Qt).
rusqlite = { version = "0.39", features = ["bundled"] }
rusqlite_migration = "2.2"
lofty = "0.24"
walkdir = "2.5"
rayon = "1.12"
image = "0.25"
blake3 = "1.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tempfile = "3"

[profile.dev]
opt-level = 1   # symphonia/audio decode is painfully slow at opt-level=0 (matters in Phase 1)
