[package]
name = "lyra-db"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
