[package]
name = "lyra-ui"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
lyra-core  = { path = "../core" }
cxx        = { workspace = true }
cxx-qt     = { workspace = true }
cxx-qt-lib = { workspace = true }

[build-dependencies]
cxx-qt-build = { workspace = true }
