[package]
name = "lyra_ui"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
lyra-core    = { path = "../core" }
lyra-db      = { path = "../db" }
lyra-library = { path = "../library" }
lyra-engine  = { path = "../engine" }
serde_json   = { workspace = true }
cxx          = { workspace = true }
cxx-qt       = { workspace = true }
cxx-qt-lib   = { workspace = true }
mpris-server  = { workspace = true }
async-channel = { workspace = true }
async-io      = { workspace = true }

[build-dependencies]
cxx-qt-build = { workspace = true }
